--- a/assets/style.css
+++ b/assets/style.css
@@ -8,15 +8,36 @@ body, html, .mainBody {
 h1, h2, h3, h4, p {
     color: #DBA632;
 }
+
 .text {
 color: #DBA632;
+font-weight: bold;
 }
 
+.play-now {
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
 .text-align-center {
     font-size: 30px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
-    padding: 70px 0;
+    padding: 200px 0;
+}
+
+.center-bottom {
+    flex-direction: column;
+    bottom: 0px;
+    position: relative;
+    padding-left: 50%;
+}
+
+.text-arrow {
+    color: #97df0f;
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
 }
 
 .arrow {
@@ -24,14 +45,11 @@ color: #DBA632;
     border-width: 0 3px 3px 0;
     display: inline-block;
     padding: 3px;
-    height: 20px;
-    width: 20px;
-    position: fixed;
-    left: 50%;
-    bottom: 20px;
+    height: 50px;
+    width: 50px;
     transform: translate(-50%, -50%);
     margin: 0 auto;
-    background-color: aqua;
+    background-color: rgb(234, 58, 23);
   }
 
 .down {
@@ -39,9 +57,6 @@ color: #DBA632;
     -webkit-transform: rotate(45deg);
   }
 
-.buttonscrollpost{
-
-}
 
 .blur {
     background-image: url('/images/game-background.avif');
@@ -57,12 +72,15 @@ color: #DBA632;
 }
 
 .border-blur {
-    box-shadow: inset 0px 0px 40px 40px #DBA632;
+    box-shadow: inset 0px 0px 40px 40px #5a4a2b;
 }
 
 .gamecontent{
     flex-direction: row;
+    text-align: center;
+    padding-top: 40px;
 }
+
 .carpos {
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
@@ -80,6 +98,10 @@ color: #DBA632;
 
 .scroll {
     scroll-behavior: smooth;
+}
+
+.center {
+    margin: auto;
 }
 
 #section1 {
@@ -114,10 +136,6 @@ color: #DBA632;
     background-size: cover;
 }
 
-.section3 {
-
-}
-
 .character-section {
     background-size: 50%;
 }
@@ -126,4 +144,36 @@ footer {
     background-color: black;
     width: 100%;
     height: 300px;
+}
+
+.twitter-icon,
+.facebook-icon,
+.instagram-icon {
+    margin-top: .625em;
+	width: 40px;
+	height: 40px;
+	opacity: .6;
+	filter: alpha(opacity=60); /* For IE8 and earlier */
+  border-radius: 25px;
+}
+
+.twitter-icon:hover,
+.facebook-icon:hover,
+.instagram-icon:hover{
+    opacity: 1.0;
+	filter: alpha(opacity=100);
+}
+
+/* .row-section2 {
+    display:flex;
+    flex-wrap: wrap;
+  } */
+
+@media screen and(max-width:900px) {
+    .sm-screen{
+        flex-direction: column;
+        max-width: 50%;
+        
+    }
+    
 }
