masih berusaha benarin game

--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,11 @@ body, html, .mainBody {
 }
 
 h1, h2, h3, h4, h6, p {
-    color: #DBA632;
+    color: #f8f6f2;
 }
 
 .text {
-color: #DBA632;
+color: #d4c7aa;
 font-weight: bold;
 }
 
