--- a/css/game.css
+++ b/css/game.css
@@ -1,11 +1,30 @@
-*{
+/* styles.css */
+/* universal selector - Applies to whole document */
+.background{
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	background: #082c6c;
-	color: #fff;
+	background: #151b25;
+	color: #8a6a6a;
 }
 
+.grid-container {
+	display: flex;
+  	flex-direction: row;
+	background-color: #2196F3;
+	padding: 10px;
+  }
+  
+  .grid-item {
+	flex-direction: column;
+	background-color: rgba(255, 255, 255, 0.8);
+	border: 1px solid rgba(0, 0, 0, 0.8);
+	padding: 20px;
+	font-size: 30px;
+	align-items: center;
+  }
+
+/* To center everything in game */
 .game{
 	display: flex;
 	flex-direction: column;
@@ -15,14 +34,16 @@
 	align-items: center;
 }
 
-
+/* Title of the game */
 .title{
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	position: absolute;
 	top: 0;
 	font-size: 4rem;
 	z-index: 2;
 }
 
+/* Score Board */
 .score{
 	display: flex;
 	width: 30vw;
@@ -32,20 +53,31 @@
 	z-index: 1;
 }
 
+/* Score */
 .p-count,.c-count{
 	text-align: center;
 	font-size: 1.5rem;
 	margin-top: 1rem;
 }
 
-.options{
+/* displaying three buttons in one line */
+.options {
 	display: flex;
 	width: 50vw;
 	justify-content: space-evenly;
 	margin-top: 2rem;
 }
 
-.rock, .paper, .scissor{
+.optionscom {
+	padding-top: 30px;
+	display: flex;
+	width: 50vw;
+	justify-content: space-evenly;
+	margin-top: 2rem;
+}
+
+/* Styling on all three buttons */
+.rock, .paper, .scissor, .rockcom, .papercom, .scissorcom {
 	padding: 0.8rem;
 	width: 100px;
 	border-radius: 10px;
@@ -61,7 +93,9 @@
 	font-weight: bold;
 }
 
+/* Reload button style */
 .reload {
+	background-image: url(/assets/refresh.png);
 	display: none;
 	margin-top: 2rem;
 	padding: 1rem;
@@ -77,9 +111,15 @@
 	font-size: 1.2rem;
 }
 
+.image {
+	height: 50px;
+	width: 50px;
+}
+/* Responsive Design */
 @media screen and (max-width: 612px)
 {
 	.title{
+		
 		text-align: center;
 	}
 	.score{
