--- a/css/game.css
+++ b/css/game.css
@@ -59,6 +59,12 @@
 	font-size: 1.5rem;
 	margin-top: 1rem;
 }
+.button{
+	border-radius: 20px;
+	width: 70px;
+	height: 40px;
+	background-color: yellow;
+}
 
 /* displaying three buttons in one line */
 .options {
