--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="form">
-      <form action="/hasil" method="post">
+      <form action="/users" method="post">
         <div class="title">Welcome</div>
         <div class="subtitle">Let's create your account!</div>
         <div class="input-container ic1">
@@ -28,7 +28,7 @@
           <div class="cut cut-short"></div>
           <label for="email" class="placeholder">Password</label>
         </div>
-        <a href="index.html"><button type="text" class="submit"> submit</button></a>        
+        <a href=""><button type="text" class="submit"> submit</button></a>        
       </div>
       </form>
 </body>
