--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,20 +9,21 @@
 </head>
 <body>
     <div class="form">
+      <form action="/login" method="post">
         <div class="title">Welcome</div>
         <div class="subtitle">Insert your account!</div>
         <div class="input-container ic1">
-          <input id="firstname" class="input" type="text" placeholder=" " />
+          <input id="firstname" class="input" type="text" name="nama" placeholder=" " />
           <div class="cut"></div>
           <label for="firstname" class="placeholder">Username</label>
         </div>
         <div class="input-container ic2">
-          <input id="lastname" class="input" type="text" placeholder=" " />
+          <input id="lastname" class="input" type="password" name="password" placeholder=" " />
           <div class="cut"></div>
           <label for="lastname" class="placeholder">Password</label>
         </div>
-        <a href="index.html"><button type="text" class="submit"> submit</button></a>        
+        <a href=""><button type="text" class="submit"> submit</button></a>    
       </div>
-
+      </form>
 </body>
 </html>
