--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,11 +34,14 @@
             </ul>
             <form class="d-flex" role="search">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/loginadmin">Super Admin</a>
+                  </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/register">Sign-Up</a>
+                        <!-- <a class="nav-link active" aria-current="page" href="/register">Sign-Up</a> -->
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/login">Login</a>
+                        <a class="nav-link active" aria-current="page" href="/login">Login User</a>
                       </li>
                 </ul>
             </form>
