--- a/views/superadmin.ejs
+++ b/views/superadmin.ejs
@@ -13,7 +13,7 @@
         <div class="title">Welcome</div>
         <div class="subtitle">Insert your account!</div>
         <div class="input-container ic1">
-          <input id="firstname" class="input" type="text" name="nama" placeholder=" " />
+          <input id="firstname" class="input" type="text" name="username" placeholder=" " />
           <div class="cut"></div>
           <label for="firstname" class="placeholder">Username</label>
         </div>
