--- a/views/DataUser/index.ejs
+++ b/views/DataUser/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
                       <td><%= data.score %></td>
                       <td>
                         <a href="/user/update?id=<%= data.id %>">
-                          <button type="submit" class="btn btn-secondary">Update</button>
+                          <button type="button" class="btn btn-secondary">Update</button>
                         </a>
                       </td>
                       <td>
@@ -58,6 +58,7 @@
                               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                               <form class="m-0 p-0" action="/user/delete?id=<%= data.id %>" method="post">
                               <button type="submit" class="btn btn-primary">Hapus</button>
+                            </form>
                             </div>
                           </div>
                         </div>
@@ -70,6 +71,8 @@
           </table>
           <a href="/home"><button type="button" class="btn btn-warning">Log Out</button></a>
           <a href="/user/add"><button type="button" class="btn btn-success">Add User</button></a>
+           
+
         </div>
     
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
