--- a/views/SuperAdmin/index.ejs
+++ b/views/SuperAdmin/index.ejs
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="form">
-      <form action="/login" method="post">
+      <form action="/loginadmin" method="post">
+        <p style="color: red;" <%- isWrong %>>Incorrect Username/Password</p>
         <div class="title">Welcome</div>
         <div class="subtitle">Insert your account!</div>
         <div class="input-container ic1">
-          <input id="firstname" class="input" type="text" name="nama" placeholder=" " />
+          <input id="firstname" class="input" type="text" name="username" placeholder=" " />
           <div class="cut"></div>
           <label for="firstname" class="placeholder">Username</label>
         </div>
