masih kurang fiture multiplayer

--- a/views/GamePage/gamePvP.ejs
+++ b/views/GamePage/gamePvP.ejs
@@ -7,7 +7,7 @@
   <title>Rock Paper Scissor</title>
 </head>
 <body class="background">
-  <button type="button" class="button"><a href="/user-page">Kembali</a></button>
+  <button type="button" class="button"><a href="/user-page?username="+ Username >Kembali</a></button>
   <section class="game">
     <div class="title">Rock Paper Scissor</div>
     <div class="grid-container">
