--- a/views/GamePage/roomCreated.ejs
+++ b/views/GamePage/roomCreated.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="text">Room Created</h1>
-    <p>Your room has been created successfully!</p>
+    <p>Room berhasil dibuat!</p>
     <p>Room Code: <%= code %></p>
     <a href="/join-room"><button type="button" class="btn btn-warning">Masuk Join Room</button></a>
 
