--- a/views/Login/index.ejs
+++ b/views/Login/index.ejs
@@ -23,7 +23,8 @@
           <div class="cut"></div>
           <label for="password" class="placeholder">Password</label>
         </div>
-        <button type="submit" class="submit"> Login</button>  
+        <button type="submit" class="submit"> Login</button>
+        <button type="button" class="submit"><a href="/home">Kembali</a></button>  
       </div>
       </form>
 </body>
