--- a/views/update.ejs
+++ b/views/update.ejs
@@ -4,18 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        <% if(isUpdate = true) {%>
-            UPDATE CUSTOMER
-            <% }else{ %>
-            ADD CUSTOMER
-                <% } %>
-    </title>
+    <title>Update User</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="p-3">
-    <div class="d-flex flex-row bd-highlight center">
+    <div class="d-flex flex-row bd-highlight center text">
             <form action="/user/update?id=<%= datauser.id  %>" method="post">
                 <div class="mb-3">
                     <label for="username">User Name :</label> <br>
